[gd_scene load_steps=10 format=3 uid="uid://p7n5n5kk4vjo"]

[ext_resource type="Script" uid="uid://mwgrq6ij5y2x" path="res://scenes/objects/plants/plantedcrop.gd" id="1_urelw"]
[ext_resource type="PackedScene" uid="uid://8tpm441eojb2" path="res://scenes/objects/plants/growth_cycle_component.tscn" id="2_p35mx"]
[ext_resource type="PackedScene" uid="uid://1wyysx5dad3u" path="res://scenes/components/hurt_component.tscn" id="3_2wwbq"]
[ext_resource type="PackedScene" uid="uid://b6b8mu3b2d2gb" path="res://scenes/components/save_data_component.tscn" id="4_sf1ja"]
[ext_resource type="PackedScene" uid="uid://c0ebot12hw7ax" path="res://scenes/objects/plants/watering_particles.tscn" id="5_ss7xp"]
[ext_resource type="PackedScene" uid="uid://dyqvbk6ovlhi" path="res://scenes/objects/plants/flowering_particles.tscn" id="6_l0xxe"]
[ext_resource type="PackedScene" uid="uid://c3myk53pl1vm" path="res://scenes/components/collectable_component.tscn" id="7_25r6l"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_uyutu"]
size = Vector2(16, 16)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_y26r2"]
size = Vector2(16, 16)

[node name="Plantedcrop" type="Node2D"]
script = ExtResource("1_urelw")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
offset = Vector2(0, -4)

[node name="GrowthCycleComponent" parent="." instance=ExtResource("2_p35mx")]

[node name="HurtComponent" parent="." instance=ExtResource("3_2wwbq")]
tool = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtComponent"]
shape = SubResource("RectangleShape2D_uyutu")

[node name="SaveDataComponent" parent="." instance=ExtResource("4_sf1ja")]

[node name="WateringParticles" parent="." instance=ExtResource("5_ss7xp")]

[node name="FloweringParticles" parent="." instance=ExtResource("6_l0xxe")]

[node name="CollectableComponent" parent="." instance=ExtResource("7_25r6l")]
monitoring = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="CollectableComponent"]
shape = SubResource("RectangleShape2D_y26r2")
debug_color = Color(0.67052, 0.392643, 0.83035, 0.42)
